Fixed tiles not z-indexing under nav

--- a/style.scss
+++ b/style.scss
@@ -42,6 +42,7 @@ img {
   position: fixed;
   top: 0%;
   width: 100%;
+  z-index: 100;
   ul {
     list-style: none;
     margin-right: 10px;
